--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.81.5",
+    "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.0",
     "react": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
