--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
     "sweetalert2": "^11.22.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
