--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
     "use-debounce": "^10.0.5"
